--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
   "devDependencies": {
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "babel-jest": "^28.1.1",
     "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "react-test-renderer": "^18.1.0",
     "vite": "^2.9.9",
     "whatwg-fetch": "^3.6.2"
   }
